<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entertainment Circle</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Image Content Description</string>

    <string name="enterEmail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="enterVIPCode">Enter your VIP code</string>
    <string name="enterUsername">Nickname in this app</string>

    <string name="goRegister">Register</string>
    <string name="goLogin">Login</string>
    <string name="goStart">Start</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="invalidEmail">Not an email address, please try again.</string>
    <string name="emailExists">This email is already registered, please go login or try a different one.</string>
    <string name="registerError">Register has failed, please check your internet and try again.</string>
    <string name="loginError">Login has failed, please check your internet and try again.</string>
    <string name="createProfileError">Failed to create your profile, please check your internet and try again.</string>
    <string name="emailPasswordMismatch">The email and password do not match any of our records.</string>

    <string name="nicknameEmpty">Please enter your nickname for other users to see.</string>
    <string name="genderEmpty">Please choose your gender.</string>

    <string name="selectImage">Select Picture</string>
    <string name="selectProfileImage">User Photo</string>
    <string name="existingPics">Gallery</string>
    <string name="useCamera">Camera</string>

    <string name="male">Guy</string>
    <string name="female">Girl</string>

    <string name="news_tab_label">news</string>
    <string name="talks_tab_label">talks</string>
    <string name="discovery_tab_label">discover</string>
    <string name="me_tab_label">settings</string>

    <string name="insertSDCard">Please check SD card, otherwise, app won\'t be able to show images.</string>

    <string name="logoutButton">Logout</string>

    <string name="newsTabTitle">Inner Circle News</string>
    <string name="publishNewsNow">Send</string>
    <string name="publishNewsHint">What you want to share with the circle. . .</string>
</resources>
