<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCreateProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageButton
               android:id="@+id/imageButtonCreateProfile"
               android:src="@drawable/pick_image"
               android:onClick="onClickAddProfileImage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="10dp"
               android:background="@null"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/desc"/>
        <TextView
            android:id="@+id/textViewCreateProfile"
            android:layout_below="@id/imageButtonCreateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:text="@string/selectProfileImage"/>

        <LinearLayout
            android:id="@+id/linearLayoutGenders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textViewCreateProfile" >
            <CheckBox
                    android:id="@+id/checkBoxMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="30dp"
                    android:text="@string/male"/>

            <CheckBox
                    android:id="@+id/checkBoxFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
        </LinearLayout>

        <EditText
            android:inputType="text"
            android:id="@+id/editTextUsername"
            android:hint="@string/enterUsername"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/linearLayoutGenders" />

        <ImageButton
               android:id="@+id/imageButtonGoApp"
               android:src="@drawable/play_icon"
               android:onClick="onClickGoApp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="20dp"
               android:background="@null"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/desc"
               android:layout_below="@id/editTextUsername" />
        <TextView
            android:id="@+id/textViewGoApp"
            android:layout_below="@id/imageButtonGoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:text="@string/goStart"/>

        <TextView
            android:id="@+id/textViewGoAppError"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewGoApp"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/opaque_red" />
        <ProgressBar
            android:id="@+id/progressBarCreateProfile"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</ScrollView>
