<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
               android:id="@+id/imageButtonGoRegister"
               android:src="@drawable/gentleman_icon"
               android:onClick="onClickGoRegister"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@null"
               android:layout_alignParentRight="true"
               android:contentDescription="@string/desc"/>
        <TextView
            android:id="@+id/textViewGoRegister"
            android:layout_below="@id/imageButtonGoRegister"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/goRegister"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/editTextLoginEmail"
            android:hint="@string/enterEmail"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:layout_below="@id/textViewGoRegister"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/editTextLoginPassword"
            android:hint="@string/enterPassword"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLoginEmail"
            android:paddingTop="15dp"
            android:layout_centerHorizontal="true"/>

        <ImageButton
               android:id="@+id/imageButtonLogin"
               android:onClick="onClickLogin"
               android:src="@drawable/lock_icon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="10dp"
               android:background="@null"
               android:layout_centerHorizontal="true"
               android:layout_below="@id/editTextLoginPassword"
               android:contentDescription="@string/desc"/>
        <TextView
            android:id="@+id/textViewLogin"
            android:layout_below="@id/imageButtonLogin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/textViewLoginError"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLogin"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/opaque_red" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</ScrollView>
